--- a/src/components/Postpage/Post.scss
+++ b/src/components/Postpage/Post.scss
@@ -33,6 +33,7 @@
                 textarea{
                     font-size: 18px;
                     resize: none;
+                    pointer-events: none;
                 }
             }
         }
